--- a/assets/style.css
+++ b/assets/style.css
@@ -1,46 +1,94 @@
-body{
-    font-family: 'Lato', sans-serif;
-    font-family: 'Open Sans', sans-serif;
+body {
+  font-family: "Lato", sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-.txt-primary{
-    color: #FD6E0A;
+.txt-primary {
+  color: #fd6e0a;
 }
-.btn-primary{
-    border-radius: 5px;
-    background: #FD6E0A;
-    border: 0;
-    color: white;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 20px 35px
+.btn-primary {
+  border-radius: 5px;
+  background: #fd6e0a;
+  border: 0;
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  padding: 20px 35px;
 }
-.header{
-    background-color: #FFF8F3;
+.section-title {
+  color: #181818;
+  text-align: center;
+  font-size: 35px;
+  font-weight: 700;
 }
-nav{
+.section-desc {
+  color: #757575;
+  text-align: center;
+  font-size: 18px;
+}
+.header {
+  background-color: #fff8f3;
+  background-image: url(../assets/images/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+}
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 200px;
+}
+.nav-title {
+  color: #181818;
+  font-size: 45px;
+  font-weight: 800;
+}
+nav > ul {
+  display: flex;
+  align-items: center;
+}
+nav li {
+  list-style: none;
+  margin-right: 50px;
+}
+.banner {
+  padding: 30px 30px 0px 150px;
+  display: flex;
+  align-items: center;
+}
+.banner .profile-pic {
+  width: 500px;
+}
+.banner-gret {
+  font-size: 45px;
+  color: #474747;
+  margin-bottom: 0;
+}
+.banner-title {
+  font-size: 85px;
+  font-weight: 700;
+  margin-top: 5px;
+  margin-bottom: 20px;
+}
+.banner-content {
+  max-width: 500px;
+}
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.about {
+  padding: 130px;
+  border-radius: 10px;
+  background: #fff8f3;
+  margin: 130px 0;
+}
+.about-container{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-left: 200px;
+    justify-content: space-around;
 }
-.nav-title{
-    color: #181818;
-    font-size: 45px;
-    font-weight: 800;
+.about-info{
+    text-align: center;
 }
-nav > ul{
-    display: flex;
-    align-items: center;
-}
-nav li{
-    list-style: none;
-    margin-right: 50px;
-}
-.banner{
-    padding: 30px 30px 30px 150px;
-    display: flex;
-    align-items: center;
-}
-.banner .profile-pic{
-    width: 500px;
+.whatIDo{
+    padding: 30px 150px;
 }
